# QMPlay2

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  QMPlay2  QMPlay2.pro  README.md  TODO  clean_unix  compile_mac  compile_unix  compile_win.bat  compile_win_cross  installer_unix  io.github.zaps166.QMPlay2.Devel.json  io.github.zaps166.QMPlay2.json  o  update_translations  version
lang/: CMakeLists.txt  ar.ts  de.ts  el_GR.ts  en.ts  es.ts  fr.ts  hu.ts  ja.ts  nl.ts  pl.ts  pt_BR.ts  ru.ts  sk.ts  tr.ts  uk.ts  zh.ts  zh_CN.ts  zh_TW.ts
src/: CMakeLists.txt  cmake_uninstall.cmake.in  src.pro
src/cmake/: Uninstall.cmake.in
src/cmake/Modules/: FindDummyPkgConfig.cmake  FindGME.cmake  FindSolidActions.cmake  FindTagLib.cmake  InstallSolidActions.cmake
src/gui/: AVThread.cpp  AVThread.hpp  AboutWidget.cpp  AboutWidget.hpp  AddressBox.cpp  AddressBox.hpp  AddressDialog.cpp  AddressDialog.hpp  Appearance.cpp  Appearance.hpp  AudioThr.cpp  AudioThr.hpp  CMakeLists.txt  ConvertWidget.cpp  ConvertWidget.hpp  DeintSettingsW.cpp  DeintSettingsW.hpp  DemuxerThr.cpp  DemuxerThr.hpp  EntryProperties.cpp  EntryProperties.hpp  EventFilterWorkarounds.cpp  EventFilterWorkarounds.hpp  InfoDock.cpp  InfoDock.hpp  KeyBindingsDialog.cpp  KeyBindingsDialog.hpp  Languages.csv  Main.cpp  Main.hpp  MainWidget.cpp  MainWidget.hpp  MenuBar.cpp  MenuBar.hpp  OSDSettingsW.cpp  OSDSettingsW.hpp  OtherVFiltersW.cpp  OtherVFiltersW.hpp  PacketBuffer.cpp  PacketBuffer.hpp  (+33 more)
src/gui/Android/: ScreenSaver.cpp  manifest
src/gui/Colors/: QMPlay1_dark.QMPlay2Color
src/gui/Icons/: applications-multimedia.svgz  archive-remove.svgz  configure.svgz  document-properties.svgz  document-save.svgz  edit-copy.svgz  folder-new.svgz  folder-orange.svgz  go-next.svgz  list-add.svgz  list-remove.svgz  media-playback-pause.svgz  media-playback-stop.svgz  media-record.svgz  media-skip-backward.svgz  process-stop.svgz  view-fullscreen.svgz  view-refresh.svgz
src/gui/KDE4/: qmplay2-opencda.desktop
src/gui/Ui/: OSDSettings.ui  SettingsGeneral.ui  SettingsPlayback.ui  SettingsPlaybackModulesList.ui  SettingsPlaybackModuleslist.ui
src/gui/Unix/: QMPlay2.1  QMPlay2.1.in  QMPlay2.appdata.xml.in  QMPlay2.desktop  QMPlay2_enqueue.desktop  QMPlay2_youtube.desktop  ScreenSaver.cpp  x-bink.xml  x-gme.xml  x-j2b.xml  x-sfx.xml  x-umx.xml
src/gui/Windows/: PanGestureEventFilter.cpp  ScreenSaver.cpp  icons.rc
src/gui/macOS/: BundleInfo.plist.in  QMPlay2.icns  QMPlay2File.icns  QMPlay2List.icns  QMPlay2MacExtensions.hpp  QMPlay2MacExtensions.mm  ScreenSaver.cpp
src/gui/ui/: settings_playback_moduleslist.ui
src/modules/: CMakeLists.txt  modules.pro
src/modules/ALSA/: ALSA.cpp  ALSA.hpp  ALSA.pro  ALSA.svgz  ALSACommon.cpp  ALSACommon.hpp  ALSAWriter.cpp  ALSAWriter.hpp  CMakeLists.txt  icon.qrc
src/modules/AudioCD/: AudioCD.cpp  AudioCD.hpp  AudioCD.pro  AudioCD.svgz  AudioCDDemux.cpp  AudioCDDemux.hpp  CD.svgz  CMakeLists.txt  icon.qrc  icons.qrc
src/modules/AudioFilters/: AVAudioFilter.cpp  AVAudioFilter.hpp  AudioFilters.cpp  AudioFilters.hpp  AudioFilters.pro  BS2B.cpp  BS2B.hpp  CMakeLists.txt  DysonCompressor.cpp  DysonCompressor.hpp  Echo.cpp  Echo.hpp  Equalizer.cpp  Equalizer.hpp  EqualizerGUI.cpp  EqualizerGUI.hpp  PhaseReverse.cpp  PhaseReverse.hpp  SwapStereo.cpp  SwapStereo.hpp  VoiceRemoval.cpp  VoiceRemoval.hpp  icon.qrc  icons.qrc
src/modules/CUVID/: CMakeLists.txt  CUVID.pro  CUVID.svgz  Cuvid.cpp  Cuvid.hpp  CuvidAPI.cpp  CuvidAPI.hpp  CuvidDec.cpp  CuvidDec.hpp  CuvidHWInterop.hpp  CuvidOpenGL.cpp  CuvidOpenGL.hpp  CuvidVulkan.cpp  CuvidVulkan.hpp  icon.qrc
src/modules/Chiptune/: CMakeLists.txt  Chiptune.cpp  Chiptune.hpp  Chiptune.pro  Chiptune.svgz  Common.cpp  Common.hpp  GME.cpp  GME.hpp  GME.svgz  SIDPlay.cpp  SIDPlay.hpp  icon.qrc  icons.qrc
src/modules/DirectX/: CMakeLists.txt  DirectDraw.cpp  DirectDraw.hpp  DirectX.cpp  DirectX.hpp  DirectX.pro  icon.qrc
src/modules/Extensions/: CMakeLists.txt  Downloader.cpp  Downloader.hpp  Extensions.cpp  Extensions.hpp  Extensions.pro  LastFM.cpp  LastFM.hpp  Lyrics.cpp  Lyrics.hpp  MPRIS2.cpp  MPRIS2.hpp  MediaBrowser.cpp  MediaBrowser.hpp  MediaBrowserJS.cpp  MediaBrowserJS.hpp  MediaBrowserJSCommon.js  MusicBrowser.cpp  MusicBrowser.hpp  OpenSubtitles.cpp  OpenSubtitles.hpp  ProstoPleer.cpp  ProstoPleer.hpp  Radio.cpp  Radio.hpp  SoundCloud.cpp  SoundCloud.hpp  Tekstowo.cpp  Tekstowo.hpp  YouTube.cpp  YouTube.hpp  downloader.svgz  icons.qrc  js.qrc  lastfm.svgz  opensubtitles.svgz  radio.svgz  video.svgz  youtube.svgz
src/modules/FFMpeg/: FFCommon.cpp  FFCommon.hpp  FFDec.cpp  FFDec.hpp  FFDecHWAccel.cpp  FFDecHWAccel.hpp  FFDecSW.cpp  FFDecSW.hpp  FFDecVAAPI.cpp  FFDecVDPAU.cpp  FFDecVDPAU.hpp  FFDecVDPAU_NW.cpp  FFDecVDPAU_NW.hpp  FFDemux.cpp  FFDemux.hpp  FFMpeg.cpp  FFMpeg.hpp  FFMpeg.pro  FFReader.cpp  FFReader.hpp  HWAccelHelper.cpp  HWAccelHelper.hpp  VAApiWriter.cpp  VAApiWriter.hpp  VDPAUWriter.cpp  VDPAUWriter.hpp  icons.qrc
src/modules/FFmpeg/: CMakeLists.txt  D3D11VA.qrc  D3D11VABuffer.dxcs  D3D11VATexture.dxcs  D3D11VAVulkan.cpp  D3D11VAVulkan.hpp  DXVA2.svgz  DXVA2OpenGL.cpp  DXVA2OpenGL.hpp  FFCommon.cpp  FFCommon.hpp  FFDec.cpp  FFDec.hpp  FFDecD3D11VA.cpp  FFDecD3D11VA.hpp  FFDecDXVA2.cpp  FFDecDXVA2.hpp  FFDecHWAccel.cpp  FFDecHWAccel.hpp  FFDecSW.cpp  (+49 more)
src/qmplay2/: AudioFilter.cpp  AudioFilter.hpp  Buffer.cpp  ByteArray.hpp  CMakeLists.txt  CPU.hpp  ChapterProgramInfo.hpp  ColorButton.cpp  ColorButton.hpp  CommonJS.cpp  CommonJS.hpp  CppUtils.hpp  Decoder.cpp  Decoder.hpp  DeintFilter.cpp  DeintHWPrepareFilter.cpp  DeintHWPrepareFilter.hpp  Demuxer.cpp  Demuxer.hpp  DockWidget.cpp  DockWidget.hpp  FFT.hpp  Frame.cpp  Frame.hpp  Functions.cpp  Functions.hpp  GPUInstance.cpp  GPUInstance.hpp  HWAccelInterface.hpp  HWDecContext.hpp  HWOpenGLInterop.hpp  Http.cpp  IOController.hpp  IPC.cpp  IPC.hpp  IPC_Unix.cpp  IPC_Windows.cpp  ImgScaler.cpp  ImgScaler.hpp  InDockW.cpp  (+83 more)
src/svg/: QMPlay2.svgz  QMPlay2File.svgz  QMPlay2List.svgz  browserengine.svgz  downloader.svgz  filters.svgz  search.svgz
(+452 files in other folders)
